Added new Bash profiling and collapsed stack tracing scripts, enhanced run_tests.bash to invoke multiple stack generators, and updated existing stack logic for aggregation and output.

--- a/links.org
+++ b/links.org
@@ -3,6 +3,8 @@ https://thume.ca/2023/12/02/tracing-methods/
 https://awsdocs-neuron.readthedocs-hosted.com/en/latest/tools/neuron-sys-tools/neuron-profile-user-guide.html
 https://github.com/janestreet/magic-trace
 https://github.com/wolfpld/tracy
+* bash
+https://www.gnu.org/software/bash/manual/html_node/Bash-Variables.html
 * profile viewers
 - https://www.speedscope.app/
 - https://ui.perfetto.dev/
